--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.10"
 sqlalchemy = "^2.0.30"
 canonicaljson = "^2.0.0"
+dill = "^0.3.9"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
