--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ black = "^24.4.2"
 pytest = "^8.3.2"
 isort = "^5.13.2"
 pre-commit = "^4.0.1"
+pytest-cov = "^5.0.0"
 
 [tool.poetry.extras]
 dill = ["dill"]
