--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,7 @@ jobs:
 
     - name: Upload coverage to Codecov
       if: ${{ !cancelled() }}
+      continue-on-error: true
       uses: codecov/codecov-action@v4
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
@@ -71,6 +72,7 @@ jobs:
 
     - name: Upload test results to Codecov
       if: ${{ !cancelled() }}
+      continue-on-error: true
       uses: codecov/test-results-action@v1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
